# sdk

./: .gitignore  README.md
drv/aht/: aht.c  aht.h
drv/aht10/: aht10.c  aht10.h
drv/ds28/: ds28.c  ds28.h  ds28ea00.c  ds28ea00.h
drv/max3010x/: max3010x.c  max3010x.h  max3010x_regs.h
drv/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_regs.h
drv/trx/: trx.c  trx.h
drv/trx/ra02/: ra02.c  ra02.h  ra02_regs.h
drv/trx/sx1278/: sx1278.c  sx1278.h  (+1 more)
hal/gpio/: gpio.h
hal/i2c/: i2c.c  i2c.h
hal/nvm/: nvm.h
hal/onewire/: onewire.c  onewire.h
hal/spi/: spi.h
hal/uart/: uart.h
hal/wdt/: wdt.h
lib/atomic/: atomic.h
lib/btn/: btn.c  btn.h
lib/elf/: elf.c  elf.h
lib/error/: assertion.h  error.c  error.h
lib/led/: led.c  led.h
lib/loader/: loader.c  loader.h  loader.ld  loader_elf.c
lib/log/: color.h  log.c  log.h
lib/os/: event.c  event.h  mutex.c  mutex.h  os.c  os.h  semaphore.h
lib/pwm/: pwm.c  pwm.h
lib/queue/: queue.c  queue.h
lib/shell/: shell.c  shell.h  shell.ld  shell_builtins.h  shell_env.c  shell_history.c  shell_parser.c  shell_util.h
lib/swdg/: soft_wdg.c  soft_wdg.h  soft_wdt.c  soft_wdt.h
lib/table/: table.c  table.h
lib/test/: test.c  test.h
lib/time/: sleep.c  sleep.h  time.c  time.h  timeout.c  timeout.h
lib/trace_alloc/: trace_alloc.c  trace_alloc.h
lib/tty/: ansi.h  line.c  line.h  tty.c  tty.h
lib/util/: bits.h  compiler.h  endianness.h  string.h  util.h  vargs.h
lib/vfs/: vfs.c  vfs.h
tests/: CMakeLists.txt
tests/vfs/: CMakeLists.txt  vfs_tests.c
toolchain/: compiler.cmake  project.cmake  utils.cmake
(+47 files in other folders)
